--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "next": "11.0.0",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.1",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "shopify-buy": "^2.11.0"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
+    "@types/shopify-buy": "^2.10.6",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.0",
     "typescript": "4.3.4"
