--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "bootstrap": "^4.6.0",
-    "next": "11.0.0",
-    "react": "17.0.2",
+    "next": "^11.1.0",
+    "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "shopify-buy": "^2.11.0"
   },
   "devDependencies": {
