--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "devDependencies": {
     "@types/react": "17.0.11",
     "@types/shopify-buy": "^2.10.6",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.0",
-    "typescript": "4.3.4"
+    "eslint-config-prettier": "^8.3.0",
+    "typescript": "^4.3.4"
   }
 }
