--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-  "name": "my-shop",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "bootstrap": "^4.6.0",
-    "next": "^11.1.2",
-    "react": "^17.0.2",
-    "react-bootstrap": "^1.6.1",
-    "react-dom": "^17.0.2",
-    "shopify-buy": "^2.12.0"
-  },
-  "devDependencies": {
-    "@types/react": "17.0.11",
-    "@types/shopify-buy": "^2.10.7",
-    "@typescript-eslint/eslint-plugin": "^4.31.0",
-    "@typescript-eslint/parser": "^4.31.0",
-    "eslint": "7.29.0",
-    "eslint-config-next": "11.0.0",
-    "eslint-config-prettier": "^8.3.0",
-    "typescript": "^4.3.4"
-  }
+    "name": "my-shop",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "cypress:open": "cypress open"
+    },
+    "dependencies": {
+        "bootstrap": "^4.6.0",
+        "next": "^11.1.2",
+        "react": "^17.0.2",
+        "react-bootstrap": "^1.6.1",
+        "react-dom": "^17.0.2",
+        "shopify-buy": "^2.12.0"
+    },
+    "devDependencies": {
+        "@types/react": "17.0.11",
+        "@types/shopify-buy": "^2.10.7",
+        "@typescript-eslint/eslint-plugin": "^4.31.0",
+        "@typescript-eslint/parser": "^4.31.0",
+        "cypress": "^8.6.0",
+        "eslint": "7.29.0",
+        "eslint-config-next": "11.0.0",
+        "eslint-config-prettier": "^8.3.0",
+        "typescript": "^4.3.4"
+    }
 }
